--- a/next.html
+++ b/next.html
@@ -4,55 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        /*สิ่งที่อยู่ตรงนี้มีไว้ให้ devอ่าน */
-        /*1. แต่งใคร (id,class,DOM)2. แต่งอะไร */
-        @font-face {
-            font-family: 'kanit';
-            src: url('./Kanit/Kanit-Regular.ttf')
-        }
-        
-        body{
-            font-family:'kanit';
-        }
-
-        .header{
-           font-size :30px;
-           text-align: center ;
-           margin: bottom 20px;
-        }
-        .container{
-            width: 400px;
-            margin-left:auto;
-            margin-right:auto;
-            background-color: azure;
-            padding :20px;
-
-        }
-        .header-from{
-           width: 140px;
-        }
-        .flex{
-          display: flex;
-        }
-        .form-input{
-          margin-bottom: 10px;
-        }
-        input.form, textarea{
-            border: 1px soli black;
-            width: 100%;
-        }
-        .center {
-            text-align: center;
-        }
-        .button{
-            border:0;
-            width: 100%;
-            height: 40px;
-        }
- 
-    </style>
-
+    <link rel ="stylesheet" href ="styles.css">
 </head>
 <body>
 
@@ -75,10 +27,16 @@
     
         <div class="flex gender from-input">
             <div class="header-form">เพศ</div> 
-            <div >
-                <input name= "gender"type="radio">ชาย
-                <input name= "gender"type="radio">หญิง
-                <input name= "gender" type="radio">อื่นๆ
+            <div class = "flex">
+                <div>
+                    <input name= "gender"type="radio">ชาย
+                </div>
+                <div>
+                    <input name= "gender"type="radio">หญิง
+                </div>
+                <div>
+                    <input name= "gender" type="radio">อื่นๆ
+                </div>
         </div>
     </div>
 
@@ -99,8 +57,8 @@
         คำอธิบายตัวยเอง
         <textarea></textarea>
     </div>
-    <div>
-        <button>ส่งข้อมูล</button>
+    <div class ="center">
+        <button class="button">ส่งข้อมูล</button>
     </div>
 </div>
 
