--- a/next.html
+++ b/next.html
@@ -14,15 +14,15 @@
     </div>
     <div class="flex form-input">
         <div class ="header-form">ชื่อ</div>
-        <input class = "form" type="text"> 
+        <input class = "form" name="firstname" type="text"> 
     </div>
     <div class="flex form-input">
         <div class ="header-form">นามสกุล</div>
-        <input  class = "form" type="text"><br>
+        <input  class = "form" name="lastname" type="text">
     </div>
     <div class="flex form-input">
         <div class ="header-form">อายุ</div>
-        <input  class = "form" type="number" min="0" max="150">
+        <input  class = "form" name="age" type="number" min="0" max="150">
     </div>
     
         <div class="flex gender from-input">
@@ -41,26 +41,27 @@
     </div>
 
     <div class="form-input">
-        สิ่งที่สนใจ
+        งานอดิเรก
         <div>
-            <input name ="interest" type="checkbox">เรียน
+            <input name ="interest" type="checkbox" value="อ่านหนังสือ">อ่านหนังสือ
         </div>
         <div>
-            <input name ="interest" type="checkbox">เล่นเกม
+            <input name ="interest" type="checkbox" value="ดูหนัง">ดูหนัง
         </div>
         <div>
-            <input name ="interest" type="checkbox">อ่านหนังสือ
+            <input name ="interest" type="checkbox" value="ฟังเพลง">ฟังเพลง
         </div>
     </div>
 
     <div class="form-input">
         คำอธิบายตัวยเอง
-        <textarea></textarea>
+        <textarea name="description"></textarea>
     </div>
     <div class ="center">
-        <button class="button">ส่งข้อมูล</button>
+        <button onclick ="submitData()" class="button">ส่งข้อมูล</button>
     </div>
 </div>
+<script src="index.js"></script>
 
 </body>
 </html> 
